Small updates to make wheel work well

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = aniparser
-version = 0.0.1
+version = attr: aniparser.__version__
 author = Dan Hess
 author_email = phxntxm1@gmail.com
 description = Provides a parser to parse file names and return data based on the names
@@ -15,10 +15,12 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
-package_dir =
-    = aniparser
-packages = find:
+packages = aniparser
 python_requires = >=3.4
+install_requires = 
+    rapidfuzz
+setup_requires = 
+    rapidfuzz
 
 [options.packages.find]
 where = aniparser
